# freetoon-lvgl

./: .gitignore  README.md  install.sh  toonvnc.sh
docs/: topicstart_nl.md
ha_packages/: README.md  deliveries.yaml  deploy.py  email_poller.py  ha_imap_strato.yaml  parse_email.py
lvgl_ui_recovered/src/: Makefile  airhist.c  backlight.c  backlight.h  bootpick.c  boxtalk.c  boxtalk.h  client_link.c  display.h  domoticz.c  domoticz.h  doorbell.c  energy_hist.c  energy_hist.h  fbdev.c  fbdev.h  fbvnc_input.c  gen_icons.py  gen_weather_icons.py  gifdec_vendored.c  glibc_compat.h  glibc_compat_wrap.c  healthcheck.c  healthcheck.h  homeassistant.c  homeassistant.h  homewizard.c  homewizard.h  http.c  http.h  i18n.c  i18n.h  icon_fan.h  icon_radiator.h  icon_wind_arrow.h  icon_wx_moon.h  icon_wx_moon_lg.h  icons.c  icons.h  layout.c  (+56 more)
pwa_static/: app.js  index.html  manifest.json  sw.js
scripts/: companion_gate.sh  ot_mode_switch.sh  toon-selfinstall.sh  toon_wasm_host.sh  ui_launcher.sh
web/: CMakeLists.txt  main_wasm.c  shell.html
